force-app/main/default/objects/KimbleOne__RoleCapability__c/KimbleOne__RoleCapability__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Role Capability</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>RoleCapability Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Role Capabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>