force-app/main/default/objects/KimbleOne__RoleCapability__c/fields/KimbleOne__ActivityRole__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActivityRole__c</fullName>
    <label>Activity Role</label>
    <referenceTo>KimbleOne__ActivityRole__c</referenceTo>
    <relationshipLabel>Role Capabilities</relationshipLabel>
    <relationshipName>RoleCapabilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>