force-app/main/default/objects/KimbleOne__RoleCapability__c/fields/KimbleOne__CapabilityType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CapabilityType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capability Type</label>
    <referenceTo>KimbleOne__CapabilityType__c</referenceTo>
    <relationshipLabel>Role Capabilities</relationshipLabel>
    <relationshipName>RoleCapabilities</relationshipName>
    <type>Lookup</type>
</CustomField>