force-app/main/default/objects/KimbleOne__RoleCapability__c/fields/KimbleOne__MinimumNumericRating__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MinimumNumericRating__c</fullName>
    <label>Minimum Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>